@@ -493,6 +493,7 @@
                 ofaBatsPage -> ofaBatPage
                 ofaBalancesGrid -> ofaBalanceGridBin
                 ofaCurrenciesPage -> ofaCurrencyPage
+                ofaLedgersPage -> ofaLedgerPage
 
  845 2015-10- 1 have a UserCredentialsBin to be used in DossierLogin
                 and DossierOpen
