@@ -104,6 +104,7 @@
    - ofaBatsPage class is renamed to ofaBatPage (todo #844).
    - ofaBalancesGrid class is renamed to ofaBalanceGridBin (todo #844/850).
    - ofaCurrenciesPage class is renamed to ofaCurrencyPage (todo #844).
+   - ofaLedgersPage class is renamed to ofaLedgerPage (todo #844).
 
 -----------------------------------------------------------------------
  Version 0.39
